--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ colorama==0.4.4
 colorgram.py==1.2.0
 cycler==0.11.0
 Deprecated==1.2.13
+deta==1.1.0
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 fonttools==4.33.3
